--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		
+<link href="https://gragasdetic.github.io/Site-de-pudin/style.css" rel="stylesheet" />
+
 	</title>
 </head>
 <body background="imagens/fundo 3.jpg" link="#000" alink="#017bf5" vlink="#000">
